cabal-version: 2.4
name: bison-grammar-codegen
version: 0.0.1
license: MIT
license-file: LICENSE.md
author: Justin Christensen
maintainer: justin@promise.io
extra-source-files: *.md

common props
    ghc-options: -Wall
    build-depends: base ^>=4.12.0.0
    default-language: Haskell2010

library
    import: props
    exposed-modules:
        Bison.Grammar.Codegen
      , Bison.Grammar.Lexer
      , Bison.Grammar.Parser
      , Bison.Grammar.Types
    hs-source-dirs: src
    build-depends:
        fast-logger
      , mtl
      , megaparsec
      , text
      , time

executable bison-gen
    import: props
    main-is: Main.hs
    other-modules:
        Paths_bison_grammar_codegen
    build-depends:
        bison-grammar-codegen
      , optparse-applicative
